Fix navbar sticky disabled with no overflow, project description overflowing on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Initial setup */
 
 html {
-  overflow-x: hidden;
+  overflow-x: clip;
   /* ROOT */
   box-sizing: border-box;
   font-size: 16px;
@@ -31,7 +31,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   background-color: var(--background-offwhite);
   color: var(--text-dark);
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 html,
@@ -47,7 +47,7 @@ main {
 
 .main-wrapper {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 .wrapper {
@@ -1463,7 +1463,7 @@ section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     /* grid-template-rows: 2fr repeat(4, 0.5fr); */
-    column-gap: 5rem;
+    column-gap: 3rem;
     align-items: start;
     margin-top: var(--5);
   }
@@ -1486,6 +1486,7 @@ section {
   }
   .projects__links {
     grid-row: 5;
+    flex-wrap: wrap;
   }
 
   .projects__link {
@@ -1675,6 +1676,10 @@ section {
 
   .experience__box::after {
     align-self: flex-start;
+  }
+
+  .projects__row {
+    column-gap: 5rem;
   }
 
   .projects__languages > p {
